@@ -17,7 +17,7 @@ use parent 'Exporter';
 
 our @EXPORT_OK = qw(decode_polyline);
 
-our $VERSION = '0.01';
+our $VERSION = '0.02';
 
 # Translated this php script
 # <http://unitstep.net/blog/2008/08/02/decoding-google-maps-encoded-polylines-using-php/>
